--- a/src/sass/1.header.scss
+++ b/src/sass/1.header.scss
@@ -1,7 +1,7 @@
 header {
     height: 550px;
 
-    background-image: url('../img/clock-blue.png');
+    background: url('../img/bg.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
