--- a/src/sass/3.benefits.scss
+++ b/src/sass/3.benefits.scss
@@ -5,6 +5,14 @@
         text-align: center;
     }
 
+    &__description {
+        @extend %h3;
+        text-align: center;
+        font-weight: 500;
+
+        margin-bottom: 2rem;
+    }
+
     img {
         margin-bottom: 2rem;
     }
