--- a/src/sass/6.offer.scss
+++ b/src/sass/6.offer.scss
@@ -64,6 +64,13 @@
                 color: $fc3;
                 display: inline-block;
                 font-size: $fsp;
+
+                &:hover {
+                    -webkit-box-shadow: 0px 14px 34px -11px rgba(219, 236, 255, 0.8);
+                    -moz-box-shadow: 0px 14px 34px -11px rgba(219, 236, 255, 0.8);
+                    box-shadow: 0px 14px 34px -11px rgba(219, 236, 255, 0.8);
+                    transition: 0.3s;
+                }
             }
         }
     }
