--- a/src/sass/1.header.scss
+++ b/src/sass/1.header.scss
@@ -10,7 +10,7 @@ header {
     // -o-background-size: cover;
     // background-size: cover;
 
-    background-image: url('../img/bg.webp');
+    background-image: url('/images/bg.webp');
     background-size: cover;
 
     .header__main {
