--- a/src/sass/5.prices.scss
+++ b/src/sass/5.prices.scss
@@ -16,7 +16,7 @@
 
         margin-bottom: 2rem;
 
-        background-image: url('../img/bgprice.webp');
+        background-image: url('/img/bgprice.webp');
         background-position: center;
     }
 
