--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ footer p, .questions p, .reviews__flex-item ul, .reviews__flex-item p, .offer p,
 
 header {
   height: 550px;
-  background-image: url(/images/bg.webp?89e8401b8992b47bd8d8cb732fd8b475);
+  background-image: url("/images/bg.webp");
   background-size: cover;
 }
 header .header__main {
@@ -287,7 +287,7 @@ header a {
 .prices__info {
   height: 200px;
   margin-bottom: 2rem;
-  background-image: url(/images/bgprice.webp?d69534f7a7b5a33efff3978e183f84b2);
+  background-image: url("/img/bgprice.webp");
   background-position: center;
 }
 .prices h2 {
