--- a/src/sass/5.prices.scss
+++ b/src/sass/5.prices.scss
@@ -10,7 +10,7 @@
 
     &__info {
         height: 150px;
-        background-image: url('../img/bgprice.jpg');
+        background-image: url('../../src/img/bgprice.webp');
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
@@ -27,7 +27,7 @@
 
     &__group {
         height: 150px;
-        background-image: url('../img/nastya.jpg');
+        background-image: url('/img/bgprice2.jpg');
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
