--- a/style.css
+++ b/style.css
@@ -1,75 +1,75 @@
 /*Reset CSS*/
 * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 :focus,
 :active {
-  outline: none;
+    outline: none;
 }
 
 a:focus,
 a:active {
-  outline: none;
+    outline: none;
 }
 
 nav,
 footer,
 header,
 aside {
-  display: block;
+    display: block;
 }
 
 html,
 body {
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1.5;
-  font-size: 14px;
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1.5;
+    font-size: 14px;
 }
 
 input,
 button,
 textarea {
-  font-family: inherit;
+    font-family: inherit;
 }
 
 input::-ms-clear {
-  display: none;
+    display: none;
 }
 
 button {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
+    padding: 0;
+    border: 0;
 }
 
 a,
 a:visited {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 ul li {
-  list-style: none;
+    list-style: none;
 }
 
 img {
-  vertical-align: top;
+    vertical-align: top;
 }
 
 h1,
@@ -78,465 +78,506 @@ h3,
 h4,
 h5,
 h6 {
-  font-size: inherit;
-  font-weight: 400;
+    font-size: inherit;
+    font-weight: 400;
 }
 
 /*--------------------*/
-.questions h2, .reviews h2, .offer h2, .prices h2, .team h2, .benefits h2, .study h2, .polina__flex-right h2, .polina h2 {
-  color: white;
-  font-size: 30px;
-  font-weight: 700;
-  font-family: Roboto Slab;
-  margin: 0 3rem;
-  padding: 2rem 0;
+.questions h2,
+.reviews h2,
+.offer h2,
+.prices h2,
+.team h2,
+.benefits h2,
+.study h2,
+.polina__flex-right h2,
+.polina h2 {
+    color: white;
+    font-size: 30px;
+    font-weight: 700;
+    font-family: Roboto Slab;
+    margin: 0 3rem;
+    padding: 2rem 0;
 }
 
-.questions summary, .reviews__flex-item h3, .offer__flex_right h3, .offer h3, .team__member_right h3, .team__description, .benefits__half h3, .benefits__description, .study__flex-item h3, header h3 {
-  color: #344767;
-  font-size: 20px;
-  font-weight: 700;
-  font-family: Roboto;
-  margin-bottom: 1rem;
+.questions summary,
+.reviews__flex-item h3,
+.offer__flex_right h3,
+.offer h3,
+.team__member_right h3,
+.team__description,
+.benefits__half h3,
+.benefits__description,
+.study__flex-item h3,
+header h3 {
+    color: #344767;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: Roboto;
+    margin-bottom: 1rem;
 }
 
-footer p, .questions p, .reviews__flex-item ul, .reviews__flex-item p, .offer p, .prices p, .team__member_right ul, .benefits__half p, .study__flex-item ul, .polina__flex-right ul, .polina__flex-right p {
-  color: #344767;
-  font-size: 16px;
-  font-weight: 300;
-  font-family: Roboto;
+footer p,
+.questions p,
+.reviews__flex-item ul,
+.reviews__flex-item p,
+.offer p,
+.prices p,
+.team__member_right ul,
+.benefits__half p,
+.study__flex-item ul,
+.polina__flex-right ul,
+.polina__flex-right p {
+    color: #344767;
+    font-size: 16px;
+    font-weight: 300;
+    font-family: Roboto;
 }
 
-.offer__flex_right a, header a {
-  color: white;
-  font-size: 12px;
-  font-weight: 700;
-  font-family: Roboto;
-  background-color: #2d86ec;
-  border-radius: 10px;
-  padding: 1rem 1.5rem;
-  border: 0;
-  text-transform: uppercase;
-  transition: 0.3s;
+.offer__flex_right a,
+header a {
+    color: white;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: Roboto;
+    background-color: #2d86ec;
+    border-radius: 10px;
+    padding: 1rem 1.5rem;
+    border: 0;
+    text-transform: uppercase;
+    transition: 0.3s;
 }
-.offer__flex_right a:hover, header a:hover {
-  box-shadow: 0px 14px 34px -11px rgba(45, 134, 236, 0.8);
-  transition: 0.3s;
+.offer__flex_right a:hover,
+header a:hover {
+    box-shadow: 0px 14px 34px -11px rgba(45, 134, 236, 0.8);
+    transition: 0.3s;
 }
 
 header {
-  height: 550px;
-  background-image: url(/images/bg.jpg?b04f5ebcb7c8945b650d500d8b6d5186);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  background-size: cover;
+    height: 550px;
+    background-image: url('src/img/bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 header .header__main {
-  padding: 8rem 15% 0;
+    padding: 8rem 15% 0;
 }
 header h1 {
-  margin-bottom: 1.5rem;
-  max-width: 750px;
+    margin-bottom: 1.5rem;
+    max-width: 750px;
 }
 header h3 {
-  color: white;
-  font-weight: 400;
-  margin-bottom: 3rem;
-  max-width: 700px;
+    color: white;
+    font-weight: 400;
+    margin-bottom: 3rem;
+    max-width: 700px;
 }
 header a {
-  margin-right: 2rem;
+    margin-right: 2rem;
 }
 
 .polina {
-  margin-bottom: 3rem;
+    margin-bottom: 3rem;
 }
 .polina__flex {
-  padding: 2rem;
-  display: flex;
-  justify-content: center;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
 }
 .polina__flex img {
-  max-width: 435px;
-  max-height: 580px;
-  border-radius: 20px;
+    max-width: 435px;
+    max-height: 580px;
+    border-radius: 20px;
 }
 .polina__flex-right {
-  margin-left: 3rem;
+    margin-left: 3rem;
 }
 .polina__flex-right h2 {
-  color: #344767;
-  margin: 3rem 0 0;
-  padding: 0;
+    color: #344767;
+    margin: 3rem 0 0;
+    padding: 0;
 }
 .polina__flex-right p {
-  margin-bottom: 2rem;
-  color: #2d86ec;
-  font-weight: 700;
+    margin-bottom: 2rem;
+    color: #2d86ec;
+    font-weight: 700;
 }
 .polina__flex-right ul {
-  max-width: 615px;
+    max-width: 615px;
 }
 .polina__flex-right li {
-  list-style: inside;
-  margin-bottom: 2rem;
+    list-style: inside;
+    margin-bottom: 2rem;
 }
 
 .study {
-  margin-bottom: 3rem;
+    margin-bottom: 3rem;
 }
 .study h2 {
-  color: #344767;
-  text-align: center;
+    color: #344767;
+    text-align: center;
 }
 .study__flex {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
 }
 .study__flex-item {
-  width: 500px;
-  padding: 2rem;
-  border-radius: 20px;
-  box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+    width: 500px;
+    padding: 2rem;
+    border-radius: 20px;
+    box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.1),
+        0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 .study__flex-item ul li {
-  list-style: inside;
+    list-style: inside;
 }
 
 .benefits h2 {
-  color: #344767;
-  text-align: center;
+    color: #344767;
+    text-align: center;
 }
 .benefits__description {
-  text-align: center;
-  font-weight: 500;
-  margin-bottom: 2rem;
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 2rem;
 }
 .benefits img {
-  margin-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 .benefits__flex {
-  display: flex;
-  justify-content: center;
-  gap: 4rem;
-  margin-bottom: 3rem;
-  padding: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 4rem;
+    margin-bottom: 3rem;
+    padding: 1rem;
 }
 .benefits__half_1 {
-  max-width: 550px;
-  margin-bottom: 3rem;
+    max-width: 550px;
+    margin-bottom: 3rem;
 }
 
 .team {
-  background: linear-gradient(90deg, rgb(48, 48, 52) 0%, rgb(64, 64, 71) 100%);
-  margin: -3rem 20px;
-  padding: 10px;
+    background: linear-gradient(
+        90deg,
+        rgb(48, 48, 52) 0%,
+        rgb(64, 64, 71) 100%
+    );
+    margin: -3rem 20px;
+    padding: 10px;
 }
 .team__description {
-  font-weight: 500;
-  color: white;
-  max-width: 800px;
-  text-align: center;
-  margin: 0 auto 5rem;
+    font-weight: 500;
+    color: white;
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto 5rem;
 }
 .team h2 {
-  text-align: center;
+    text-align: center;
 }
 .team__member {
-  display: flex;
-  gap: 3rem;
-  max-width: 1200px;
-  margin: 0 auto 5rem;
-  border-radius: 20px;
-  background-color: white;
+    display: flex;
+    gap: 3rem;
+    max-width: 1200px;
+    margin: 0 auto 5rem;
+    border-radius: 20px;
+    background-color: white;
 }
 .team__member:last-child {
-  margin-bottom: 7rem;
+    margin-bottom: 7rem;
 }
 .team__member img {
-  width: 250px;
-  height: 250px;
-  margin: -3rem 0 0 1rem;
-  padding: 1rem;
-  border-radius: 30px;
+    width: 250px;
+    height: 250px;
+    margin: -3rem 0 0 1rem;
+    padding: 1rem;
+    border-radius: 30px;
 }
 .team__member_right {
-  padding: 2rem;
+    padding: 2rem;
 }
 .team__member_right h3 {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 .team__member_right ul {
-  font-weight: 700;
+    font-weight: 700;
 }
 .team__member_right ul li {
-  list-style: inside;
-  font-weight: 300;
+    list-style: inside;
+    font-weight: 300;
 }
 .team__member_sign {
-  color: #2d86ec !important;
-  font-weight: 700 !important;
-  margin-bottom: 1rem;
+    color: #2d86ec !important;
+    font-weight: 700 !important;
+    margin-bottom: 1rem;
 }
 
 .prices {
-  margin: 0 20px;
-  background: white;
-  padding: 0 0 2rem;
+    margin: 0 20px;
+    background: white;
+    padding: 0 0 2rem;
 }
 .prices h2 {
-  text-align: center;
+    text-align: center;
 }
 .prices__info {
-  height: 150px;
-  background-image: url(/images/bgprice.jpg?219120ed4a0101ee74fe90ac9923c9ca);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  background-size: cover;
-  margin-bottom: 2rem;
+    height: 150px;
+    background-image: url('src/img/bgprice.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
+    margin-bottom: 2rem;
 }
 .prices__group {
-  height: 150px;
-  background-image: url(/images/nastya.jpg?61115820a6f3c116daaa1af6c76d8dc6);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  background-size: cover;
+    height: 150px;
+    background-image: url('src/img/bgprice2.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 .prices p {
-  color: white;
-  text-align: center;
+    color: white;
+    text-align: center;
 }
 .prices img {
-  max-width: 300px;
-  margin: -3rem 0 0;
+    max-width: 300px;
+    margin: -3rem 0 0;
 }
 .prices__flex1 {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-  margin: -2rem 0 3rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin: -2rem 0 3rem;
 }
 .prices__flex2 {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
 }
 
 .offer {
-  margin: 0 20px;
-  background: #2d86ec;
-  border-radius: 0 0 20px 20px;
-  padding: 0 0 2rem;
+    margin: 0 20px;
+    background: #2d86ec;
+    border-radius: 0 0 20px 20px;
+    padding: 0 0 2rem;
 }
 .offer h2 {
-  padding: 3rem 0 0;
-  margin: 0;
+    padding: 3rem 0 0;
+    margin: 0;
 }
 .offer p {
-  color: white;
-  margin-bottom: 2rem;
+    color: white;
+    margin-bottom: 2rem;
 }
 .offer h3 {
-  color: white;
+    color: white;
 }
 .offer__flex {
-  margin: 0 3rem;
-  display: flex;
-  justify-content: space-around;
-  color: white;
+    margin: 0 3rem;
+    display: flex;
+    justify-content: space-around;
+    color: white;
 }
 .offer__flex_left {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
 .offer__flex_left-item {
-  width: 50%;
-  font-weight: 300;
-  font-family: Roboto;
-  margin-bottom: 1.5rem;
-  display: flex;
-  align-items: center;
+    width: 50%;
+    font-weight: 300;
+    font-family: Roboto;
+    margin-bottom: 1.5rem;
+    display: flex;
+    align-items: center;
 }
 .offer__flex_left img {
-  display: inline;
-  height: 30px;
-  width: 30px;
-  margin-right: 0.5rem;
+    display: inline;
+    height: 30px;
+    width: 30px;
+    margin-right: 0.5rem;
 }
 .offer__flex_right {
-  text-align: center;
-  margin: auto 0;
+    text-align: center;
+    margin: auto 0;
 }
 .offer__flex_right h3 {
-  margin-bottom: 1rem;
-  font-weight: 400;
+    margin-bottom: 1rem;
+    font-weight: 400;
 }
 .offer__flex_right a {
-  background-color: white;
-  color: #2d86ec;
-  display: inline-block;
-  font-size: 16px;
+    background-color: white;
+    color: #2d86ec;
+    display: inline-block;
+    font-size: 16px;
 }
 .offer__flex_right a:hover {
-  box-shadow: 0px 14px 34px -11px rgba(219, 236, 255, 0.8);
-  transition: 0.3s;
+    box-shadow: 0px 14px 34px -11px rgba(219, 236, 255, 0.8);
+    transition: 0.3s;
 }
 
 .reviews {
-  margin: 0 20px;
-  padding: 0 0 2rem;
-  background: linear-gradient(90deg, rgb(48, 48, 52) 0%, rgb(64, 64, 71) 100%);
+    margin: 0 20px;
+    padding: 0 0 2rem;
+    background: linear-gradient(
+        90deg,
+        rgb(48, 48, 52) 0%,
+        rgb(64, 64, 71) 100%
+    );
 }
 .reviews h2 {
-  text-align: center;
+    text-align: center;
 }
 .reviews__flex {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  margin-bottom: 3rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    margin-bottom: 3rem;
 }
 .reviews__flex-item {
-  background-color: white;
-  width: 33%;
-  padding: 2rem;
-  border-radius: 20px;
-  box-shadow: 4px 4px 8px 0px rgba(255, 255, 255, 0.2);
+    background-color: white;
+    width: 33%;
+    padding: 2rem;
+    border-radius: 20px;
+    box-shadow: 4px 4px 8px 0px rgba(255, 255, 255, 0.2);
 }
 .reviews__flex-item p {
-  margin-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 .reviews__flex-item ul {
-  margin-bottom: 1rem;
-  color: #2d86ec;
-  font-weight: 700;
+    margin-bottom: 1rem;
+    color: #2d86ec;
+    font-weight: 700;
 }
 .reviews__flex-item ul li {
-  color: #344767;
-  font-weight: 300;
+    color: #344767;
+    font-weight: 300;
 }
 .reviews__flex-item img {
-  width: 300px;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-  border-radius: 20px;
-  box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+    width: 300px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    border-radius: 20px;
+    box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.1),
+        0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
 .questions {
-  margin: 0 20px 3rem;
-  padding: 2rem;
+    margin: 0 20px 3rem;
+    padding: 2rem;
 }
 .questions h2 {
-  color: #344767;
-  text-align: center;
+    color: #344767;
+    text-align: center;
 }
 .questions details {
-  display: block;
-  background: white;
-  max-width: 100%;
-  box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-  border-radius: 20px;
-  overflow: hidden;
-  margin: 0 3rem 2rem;
+    display: block;
+    background: white;
+    max-width: 100%;
+    box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.1),
+        0 10px 10px -5px rgba(0, 0, 0, 0.04);
+    border-radius: 20px;
+    overflow: hidden;
+    margin: 0 3rem 2rem;
 }
 .questions summary::-webkit-details-marker {
-  display: none;
+    display: none;
 }
 .questions summary::-moz-list-bullet {
-  list-style-type: none;
+    list-style-type: none;
 }
 .questions summary::marker {
-  display: none;
+    display: none;
 }
 .questions summary {
-  display: block;
-  padding: 1em 2em 1em 0.9em;
-  border-bottom: 1px solid #e2e8f0;
-  cursor: pointer;
-  position: relative;
-  margin-bottom: 0;
+    display: block;
+    padding: 1em 2em 1em 0.9em;
+    border-bottom: 1px solid #e2e8f0;
+    cursor: pointer;
+    position: relative;
+    margin-bottom: 0;
 }
 .questions summary:before {
-  top: 0.4em;
-  right: 0.3em;
-  color: transparent;
-  width: 1em;
-  height: 1em;
-  content: "";
-  position: absolute;
-  transition: transform 0.5s;
+    top: 0.4em;
+    right: 0.3em;
+    color: transparent;
+    width: 1em;
+    height: 1em;
+    content: '';
+    position: absolute;
+    transition: transform 0.5s;
 }
 .questions details[open] > summary:before {
-  transform: scale(1, -1);
+    transform: scale(1, -1);
 }
 .questions summary ~ * {
-  padding: 1em;
+    padding: 1em;
 }
 .questions details[open] summary ~ * {
-  animation: sweep 0.5s ease-in-out;
+    animation: sweep 0.5s ease-in-out;
 }
 @keyframes sweep {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 .questions summary:focus {
-  outline: 0;
-  box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3), inset 0 0 2px rgba(0, 0, 0, 0.3);
+    outline: 0;
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3),
+        inset 0 0 2px rgba(0, 0, 0, 0.3);
 }
 
 @media (max-width: 768px) {
-  .questions p {
-    font-size: 12px;
-  }
-  .questions summary {
-    font-weight: 600;
-  }
+    .questions p {
+        font-size: 12px;
+    }
+    .questions summary {
+        font-weight: 600;
+    }
 }
 footer {
-  padding: 0 5rem 3rem;
+    padding: 0 5rem 3rem;
 }
 footer p {
-  text-align: center;
+    text-align: center;
 }
 footer .footer__email {
-  display: block;
-  text-align: center;
+    display: block;
+    text-align: center;
 }
 footer .footer__email a {
-  color: #344767;
+    color: #344767;
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 body {
-  font-family: Roboto Slab, Roboto;
-  background-color: #edeff2;
+    font-family: Roboto Slab, Roboto;
+    background-color: #edeff2;
 }
 
 h1 {
-  font-family: Roboto Slab;
-  font-weight: 700;
-  font-size: 48px;
-  color: white;
+    font-family: Roboto Slab;
+    font-weight: 700;
+    font-size: 48px;
+    color: white;
 }
 
 main {
-  background-color: #fcfcfd;
-  margin: -3rem 20px -3rem;
-  border-radius: 20px;
-  padding: 10px;
+    background-color: #fcfcfd;
+    margin: -3rem 20px -3rem;
+    border-radius: 20px;
+    padding: 10px;
 }
