Fix team block, delete question block

--- a/src/sass/5.prices.scss
+++ b/src/sass/5.prices.scss
@@ -27,7 +27,7 @@
 
     &__group {
         height: 150px;
-        background-image: url('/img/bgprice2.jpg');
+        background-image: url('../../src/img/bgprice2.jpg');
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
