--- a/src/sass/4.team.scss
+++ b/src/sass/4.team.scss
@@ -22,13 +22,19 @@
         text-align: center;
     }
 
+    a {
+        @extend %btn;
+        margin: auto 2rem auto 0;
+        text-align: center;
+    }
+
     &__member {
         &:last-child {
             margin-bottom: 7rem;
         }
         display: flex;
-        // justify-content: space-between;
-        gap: 3rem;
+        justify-content: space-between;
+        grid-gap: 20px;
 
         max-width: 1200px;
 
@@ -47,6 +53,8 @@
 
         &_right {
             padding: 2rem;
+            width: 100%;
+            max-width: 600px;
             h3 {
                 @extend %h3;
                 margin-bottom: 0;
