--- a/src/sass/1.header.scss
+++ b/src/sass/1.header.scss
@@ -1,7 +1,8 @@
 header {
     height: 550px;
+    width: 100%;
 
-    background-image: url('/src/img/bg.jpg');
+    background-image: url('../img/bg.webp');
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
@@ -9,9 +10,6 @@ header {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-
-    // background-image: url('/images/bg.webp');
-    // background-size: cover;
 
     .header__main {
         padding: 8rem 15% 0;
