--- a/src/sass/4.team.scss
+++ b/src/sass/4.team.scss
@@ -17,6 +17,18 @@
         margin: 0 auto 5rem;
     }
 
+    &__polina_a {
+        margin: auto 2rem auto 0;
+    }
+
+    &__btn {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: auto 2rem auto 0;
+        gap: 2rem;
+    }
+
     h2 {
         @extend %h2;
         text-align: center;
@@ -24,7 +36,8 @@
 
     a {
         @extend %btn;
-        margin: auto 2rem auto 0;
+
+        // margin-bottom: 2rem;
         text-align: center;
     }
 
