--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -143,6 +143,8 @@ $fwbtn: 700;
         -webkit-box-shadow: 0px 14px 34px -11px rgba(45, 134, 236, 0.8);
         -moz-box-shadow: 0px 14px 34px -11px rgba(45, 134, 236, 0.8);
         box-shadow: 0px 14px 34px -11px rgba(45, 134, 236, 0.8);
+        // color: $fc3;
+        // background-color: $fc1;
         transition: 0.3s;
     }
 }
