Feature add mob version

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,7 +88,6 @@ h6 {
   font-size: 30px;
   font-weight: 700;
   font-family: Roboto Slab;
-  margin: 0 3rem;
   padding: 2rem 0;
 }
 
@@ -108,6 +107,7 @@ footer p, .questions p, .reviews__flex-item ul, .reviews__flex-item p, .offer p,
 }
 
 .offer__flex_right a, .team a, header a {
+  display: inline-block;
   color: white;
   font-size: 12px;
   font-weight: 700;
@@ -117,6 +117,7 @@ footer p, .questions p, .reviews__flex-item ul, .reviews__flex-item p, .offer p,
   padding: 1rem 1.5rem;
   border: 0;
   text-transform: uppercase;
+  text-align: center;
   transition: 0.3s;
 }
 .offer__flex_right a:hover, .team a:hover, header a:hover {
@@ -148,8 +149,23 @@ header h3 {
 }
 header a {
   margin-right: 2rem;
+  margin-bottom: 1rem;
 }
 
+@media (max-width: 760px) {
+  header {
+    height: 100vh;
+  }
+  header .header__main {
+    padding: 8rem 10%;
+  }
+  header .header__links {
+    text-align: center;
+  }
+  header .header__links a {
+    margin: 0 0 1rem 0;
+  }
+}
 .polina {
   margin-bottom: 3rem;
 }
@@ -228,13 +244,20 @@ header a {
 }
 .benefits__half_1 {
   max-width: 550px;
+  min-height: 210px;
   margin-bottom: 3rem;
 }
 
+@media (max-width: 760px) {
+  .benefits__flex {
+    flex-direction: column;
+    gap: 0;
+  }
+}
 .team {
   background: linear-gradient(90deg, rgb(48, 48, 52) 0%, rgb(64, 64, 71) 100%);
   margin: -3rem 20px;
-  padding: 10px;
+  padding: 1rem;
 }
 .team__description {
   font-weight: 500;
@@ -299,6 +322,26 @@ header a {
   margin-bottom: 1rem;
 }
 
+@media (max-width: 760px) {
+  .team__member {
+    flex-direction: column;
+    max-width: 400px;
+    text-align: center;
+  }
+  .team__member_right {
+    padding: 0 1rem;
+  }
+  .team__member img {
+    margin: -3rem auto 0;
+  }
+  .team__polina_a {
+    margin: 0 auto 1rem;
+  }
+  .team__btn {
+    margin: 0 auto 1rem;
+    gap: 1rem;
+  }
+}
 .prices {
   margin: 0 20px;
   background: white;
@@ -344,6 +387,33 @@ header a {
   display: flex;
   justify-content: center;
   gap: 1rem;
+}
+
+.prices__flex1 {
+  flex-direction: column;
+  align-items: center;
+}
+.prices__flex1 img {
+  margin: -2rem 0 0;
+}
+.prices__flex1 img:first-child {
+  margin-bottom: 2rem;
+}
+.prices__flex2 {
+  flex-direction: column;
+  align-items: center;
+}
+.prices__flex2 img {
+  margin: -2rem 0 0;
+}
+.prices__flex2 img:first-child {
+  margin-bottom: 2rem;
+}
+.prices__info {
+  height: 200px;
+}
+.prices__group {
+  height: 200px;
 }
 
 .offer {
@@ -406,6 +476,20 @@ header a {
   transition: 0.3s;
 }
 
+@media (max-width: 760px) {
+  .offer {
+    text-align: center;
+  }
+  .offer__flex {
+    margin: 0 1rem;
+    flex-direction: column;
+  }
+  .offer__flex_left {
+    text-align: left;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .reviews {
   margin: 0 20px;
   padding: 0 0 2rem;
@@ -440,7 +524,8 @@ header a {
   font-weight: 300;
 }
 .reviews__flex-item img {
-  width: 300px;
+  width: 100%;
+  max-width: 300px;
   height: auto;
   display: block;
   margin: 0 auto;
@@ -448,6 +533,15 @@ header a {
   box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
+@media (max-width: 760px) {
+  .reviews__flex {
+    flex-direction: column;
+  }
+  .reviews__flex-item {
+    width: 95%;
+    margin: 0 auto;
+  }
+}
 .questions {
   margin: 0 20px 3rem;
   padding: 2rem;
@@ -556,9 +650,18 @@ main {
   background-color: #fcfcfd;
   margin: -3rem 20px -3rem;
   border-radius: 20px;
-  padding: 10px;
+  padding: 1rem;
 }
 
 .page {
   padding-bottom: 3rem;
+}
+
+@media (max-width: 760px) {
+  h1 {
+    font-family: Roboto Slab;
+    font-weight: 700;
+    font-size: 30px;
+    color: white;
+  }
 }
