--- a/src/sass/6.offer.scss
+++ b/src/sass/6.offer.scss
@@ -75,3 +75,17 @@
         }
     }
 }
+@media (max-width: 760px) {
+    .offer {
+        text-align: center;
+        &__flex {
+            margin: 0 1rem;
+            flex-direction: column;
+            &_left {
+                text-align: left;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    }
+}
