--- a/src/sass/6.reviews.scss
+++ b/src/sass/6.reviews.scss
@@ -47,7 +47,8 @@
             }
 
             img {
-                width: 300px;
+                width: 100%;
+                max-width: 300px;
                 height: auto;
                 display: block;
                 margin: 0 auto;
@@ -55,6 +56,19 @@
                 border-radius: 20px;
                 box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.1),
                     0 10px 10px -5px rgba(0, 0, 0, 0.04);
+            }
+        }
+    }
+}
+
+@media (max-width: 760px) {
+    .reviews {
+        &__flex {
+            flex-direction: column;
+
+            &-item {
+                width: 95%;
+                margin: 0 auto;
             }
         }
     }
