--- a/src/css/style.css
+++ b/src/css/style.css
@@ -489,6 +489,9 @@ header a {
     flex-direction: column;
     align-items: center;
   }
+  .offer__flex_left-item {
+    width: 80%;
+  }
 }
 .reviews {
   margin: 0 20px;
