--- a/src/sass/6.offer.scss
+++ b/src/sass/6.offer.scss
@@ -85,6 +85,9 @@
                 text-align: left;
                 flex-direction: column;
                 align-items: center;
+                &-item {
+                    width: 80%;
+                }
             }
         }
     }
