--- a/src/css/style.css
+++ b/src/css/style.css
@@ -126,13 +126,18 @@ footer p, .questions p, .reviews__flex-item ul, .reviews__flex-item p, .offer p,
 }
 
 header {
-  height: 550px;
+  height: 80vh;
   width: 100%;
   background-image: url("../img/bg.webp");
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+}
+header .header__links {
+  display: flex;
+  justify-content: left;
+  gap: 2rem;
 }
 header .header__main {
   padding: 8rem 15% 0;
@@ -147,23 +152,16 @@ header h3 {
   margin-bottom: 3rem;
   max-width: 700px;
 }
-header a {
-  margin-right: 2rem;
-  margin-bottom: 1rem;
-}
-
 @media (max-width: 760px) {
   header {
-    height: 100vh;
+    height: 90vh;
   }
   header .header__main {
     padding: 8rem 10%;
   }
   header .header__links {
-    text-align: center;
-  }
-  header .header__links a {
-    margin: 0 0 1rem 0;
+    flex-direction: column;
+    max-width: 250px;
   }
 }
 .polina {
