--- a/src/sass/4.team.scss
+++ b/src/sass/4.team.scss
@@ -105,6 +105,10 @@
             img {
                 margin: -3rem auto 0;
             }
+
+            ul {
+                text-align: left;
+            }
         }
 
         &__polina_a {
