--- a/src/sass/3.benefits.scss
+++ b/src/sass/3.benefits.scss
@@ -1,4 +1,7 @@
 .benefits {
+    padding: 0 1rem;
+    margin-bottom: 3rem;
+
     h2 {
         @extend %h2;
         color: $fc2;
@@ -21,8 +24,6 @@
         display: flex;
         justify-content: center;
         gap: 4rem;
-        margin-bottom: 3rem;
-        padding: 1rem;
     }
 
     &__half {
@@ -44,9 +45,18 @@
 
 @media (max-width: 760px) {
     .benefits {
+        padding: 0 0.5rem;
+
         &__flex {
             flex-direction: column;
             gap: 0;
+        }
+        &__description {
+            @extend %h3;
+            text-align: center;
+            font-weight: 500;
+
+            margin-bottom: 2rem;
         }
     }
 }
