--- a/src/sass/2.study.scss
+++ b/src/sass/2.study.scss
@@ -1,4 +1,5 @@
 .study {
+    padding: 0 1rem;
     margin-bottom: 3rem;
 
     h2 {
@@ -32,5 +33,11 @@
                 }
             }
         }
+    }
+}
+
+@media (max-width: 760px) {
+    .study {
+        padding: 0 0.5rem;
     }
 }
