--- a/src/sass/6.offer.scss
+++ b/src/sass/6.offer.scss
@@ -1,8 +1,7 @@
 .offer {
-    margin: 0 20px;
     background: $fc3;
     border-radius: 0 0 20px 20px;
-    padding: 0 0 2rem;
+    padding: 0 1rem 2rem;
 
     h2 {
         @extend %h2;
@@ -22,8 +21,6 @@
     }
 
     &__flex {
-        margin: 0 3rem;
-
         display: flex;
         justify-content: space-around;
         color: $fc1;
@@ -77,6 +74,8 @@
 }
 @media (max-width: 760px) {
     .offer {
+        padding: 0 0.5rem 2rem;
+
         text-align: center;
         &__flex {
             margin: 0 1rem;
